third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/pinned_drop/wrong_receiver.stderr
error[E0053]: method `drop` has an incompatible type for trait
 --> tests/ui/compile-fail/pinned_drop/wrong_receiver.rs:8:13
  |
8 |     fn drop(&mut self) {}
  |             ^^^^^^^^^ expected `Pin<&mut Foo>`, found `&mut Foo`
  |
  = note: expected signature `fn(Pin<&mut Foo>, pin_init::__internal::OnlyCallFromDrop)`
             found signature `fn(&mut Foo, pin_init::__internal::OnlyCallFromDrop)`
help: change the self-receiver type to match the trait
  |
8 -     fn drop(&mut self) {}
8 +     fn drop(self: Pin<&mut Foo>) {}
  |
